# libagilispiezo-cpp

./: .gitignore  CMakeLists.txt  readme.md
cmake/: agilispiezoConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp
include/agilispiezo/: agilispiezo.h  serial.h
include/libagilispiezo/: agilispiezo.h  serial.h
src/: agilispiezo.cpp  main.cpp  serial.cpp
